--- a/css/common.css
+++ b/css/common.css
@@ -1,5 +1,14 @@
+* {
+	margin: 0px;
+	padding: 0px;
+
+}
+
+body {
+		background-image:url(img/background.png);
+}
 header {
-    background-color: #5F9F9F;
+    background-image: url(img/header.png);
     margin-bottom: 10px;
     padding: 20px;
 }
@@ -7,11 +16,33 @@ header {
 #vanity a {
   text-decoration:none;
   color: #FFFFFF;
-  text-align:center;
+  text-align:left;
+  font-size: 1.5em;
 }
 
-h1 {text-align:center;}
+#nav {
+	margin-top: 20px;
+}
 
-body {
-  background-color: #F2F3F9;
+h1 {
+	text-align:left;
+}
+
+#nav{
+	text-align: center;
+}
+
+#nav a {
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
+
+		
+hr {
+    padding: 0;
+    border: none;
+    border-top: medium double #FFFFFF;
+    color: #FFFFFF;
+    text-align: center;
 }
