--- a/css/common.css
+++ b/css/common.css
@@ -5,17 +5,18 @@
 }
 
 body {
-		background-image:url(img/background.png);
+		background-image:url(../img/background.png);
 }
 header {
-    background-image: url(img/header.png);
+    background-image: url(../img/header.png);
     margin-bottom: 10px;
     padding: 20px;
 }
 
 #vanity a {
+  font-family: 'Ubuntu', sans-serif;
   text-decoration:none;
-  color: #FFFFFF;
+  color: #C2250A;
   text-align:left;
   font-size: 1.5em;
 }
@@ -35,6 +36,10 @@ h1 {
 #nav a {
 	color: #FFFFFF;
 	text-decoration: none;
+}
+
+#nav a:hover {
+	color: #C2250A;
 }
 
 
