--- a/css/common.css
+++ b/css/common.css
@@ -8,21 +8,40 @@ body {
 		background-image:url(../img/background.png);
 }
 header {
-    background-image: url(../img/header.png);
+    /*background-image: url(../img/header.png);*/
+    background-color: #222222;
     margin-bottom: 10px;
     padding: 20px;
+}
+
+a {
+	transition: color 0.25s;
+	color: inherit;
 }
 
 #vanity a {
   font-family: 'Ubuntu', sans-serif;
   text-decoration:none;
-  color: #C2250A;
+  color: #CC0000;
   text-align:left;
   font-size: 1.5em;
 }
 
 #nav {
 	margin-top: 20px;
+}
+
+#nav li{
+	display: inline-block;
+	padding-left: 20px;
+	padding-right: 20px;
+	color: #FFFFFF;
+	font-family: 'Ubuntu', sans-serif;
+}
+
+
+#nav li:hover{
+	color: #C2250A;
 }
 
 h1 {
@@ -34,20 +53,21 @@ h1 {
 }
 
 #nav a {
-	color: #FFFFFF;
+	color: inherit;
 	text-decoration: none;
 }
 
-#nav a:hover {
-	color: #C2250A;
-}
-
-
-		
 hr {
     padding: 0;
     border: none;
     border-top: medium double #FFFFFF;
     color: #FFFFFF;
     text-align: center;
+}
+
+
+#contentArea{
+	font-family: 'Roboto Slab', serif;
+	margin-left: 75px;
+	margin-top: 20px;
 }
