--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,7 @@ header {
     background-color: #00005C;
     margin-bottom: 10px;
     padding: 45px;
+    opacity: 0.87;
 }
 
 a {
@@ -67,6 +68,7 @@ hr {
 #contact{
   background-color: #00005C;
   text-align: center;
+  opacity: 0.87;
 }
 
 #contact li{
