--- a/css/experience.css
+++ b/css/experience.css
@@ -4,13 +4,18 @@
     font-size: 50px;
 }
 
-#courseID {
-	color: #00005C;
-	font-weight: bold;
+#company {
+	font-size: 30px;
+    margin-top: 10px;
 }
 
-#company {
-	font-style: italic;
+#position {
+    font-weight: bold;
+    color: #00005C;
+    font-size: 20px;
+}
+
+#time {
 }
 
 #job1 {
@@ -18,6 +23,7 @@
     margin-left: 100px;
     margin-right: 100px;
     margin-bottom: 20px;
+    text-align: justify;
 }
 
 #job1 img {
@@ -28,16 +34,12 @@
     margin: 10px;
 }
 
-#job1 h3 {
-	font-weight: bold;
-    margin-top: 10px;
-}
-
 #job2 {
     margin-top: 70px;
     margin-left: 100px;
     margin-right: 100px;
     margin-bottom: 20px;
+    text-align: justify;
 }
 
 #job2 img {
@@ -48,7 +50,7 @@
     margin: 10px;
 }
 
-#job2 h3 {
-	font-weight: bold;
-    margin-top: 10px;
+#courseID {
+    color: #00005C;
+    font-weight: bold;
 }
