--- a/css/common.css
+++ b/css/common.css
@@ -5,7 +5,8 @@
 }
 
 body {
-	background-image:url(../img/background.png);
+	height: 100%;
+	background-color: #F9F9F9;
 }
 
 header {
@@ -46,7 +47,7 @@ a {
 }
 
 #nav .selected {
-	color: #999999;
+	font-size: 32px;
 }
 
 #nav a {
@@ -62,26 +63,34 @@ hr {
     text-align: center;
 }
 
-#contentArea{
+.contentArea{
 	font-family: 'Roboto Slab', serif;
+	min-height: 100%;
 	margin-left: 75px;
 	margin-top: 20px;
 	margin-right: 75px;
+	margin-bottom: -50px; 
 }
 
-#contact{
+.contentArea:after {
+  content: "";
+  display: inline-block;
+}
+
+.contact, .contentArea:after{
   background-color: #00005C;
   text-align: center;
   opacity: 0.87;
+  height:  50px;
 }
 
-#contact li{
+.contact li{
 	display: inline-block;
 	padding-left: 20px;
 	padding-right: 20px;
 }
 
-#contact img{
+.contact img{
 	height: 30px;
 	width: 30px;
 	padding: 10px;
