--- a/css/experience.css
+++ b/css/experience.css
@@ -1,15 +1,3 @@
-.category {
-	color: #00005C;
-	font-weight: bold;
-    font-size: 50px;
-}
-
-.company {
-	font-size: 32px;
-    margin-top: 10px;
-    color: #000000;
-}
-
 .position {
     font-weight: bold;
     color: #00005C;
@@ -24,6 +12,7 @@
 .job1 {
 	padding-top: 20px;
     padding-left: 150px;
+    padding-right: 150px;
     padding-bottom: 20px;
     text-align: left;
     width: auto;
@@ -34,9 +23,9 @@
 
 .job1 img {
     display: block;
-    float: left; 
+    float: right; 
     width: auto;
-    height: 100px;
+    height: auto;
     max-width: 200px;
     max-height: 100px;
     margin: 10px;
@@ -47,6 +36,7 @@
 .job2 {
     padding-top: 20px;
     padding-right: 150px;
+    padding-left: 150px;
     padding-bottom: 20px;
     text-align: right;
     width: auto;
@@ -57,7 +47,7 @@
 
 .job2 img {
     display: block;
-    float: right; 
+    float: left; 
     width: auto;
     height: auto;
     max-width: 200px;
@@ -77,7 +67,7 @@
 }
 
 .subject {
-    
+    min-height: 200px;
 }
 
 .subject h3 {
