--- a/css/experience.css
+++ b/css/experience.css
@@ -16,6 +16,7 @@
     padding-bottom: 20px;
     text-align: left;
     width: auto;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     color: #555555;
@@ -40,6 +41,7 @@
     padding-bottom: 20px;
     text-align: right;
     width: auto;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     color: #444444;
