--- a/css/common.css
+++ b/css/common.css
@@ -86,6 +86,14 @@ hr {
   clear:both;
 }
 
+.contact {
+	position:fixed;
+	z-index:150;
+	bottom:0;
+	height:45px;
+	width: 100%;
+}
+
 .contact li{
 	display: inline-block;
 	padding-left: 20px;
