--- a/css/common.css
+++ b/css/common.css
@@ -117,3 +117,28 @@ hr {
     margin-top: 10px;
     color: #000000;
 }
+
+#subNav {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+#subNav li {
+    display: inline-block;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+#subNav a{
+    border-radius: 5px;
+    font-size: 32px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #00005C;
+    border: 2px solid #00005C;
+}
+
+#subNav a:hover {
+    border: 2px solid #999999;
+}
