updated cds position

--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,6 @@
 .project .details {
 	padding-bottom: 20px;
+    float: right;
     /*padding-left: 200px;
     margin-left: 5px;*/
 }
@@ -12,4 +13,5 @@
     border-radius: 100%;
     vertical-align: middle;
     height: 100%;
+    border: 2px solid;
 }
