--- a/assests/css/custom.css
+++ b/assests/css/custom.css
@@ -4,10 +4,15 @@
 /*Typography*/
 
 html,body{font-family:'Droid Serif',serif;}
-legend{font-size:36px;color:#663399;}
-a:focus {outline:0;}
-
-
+legend{
+	font-size:36px;
+	color:#14b9ff;
+	border-left:2px solid #444444;
+	padding-left:14px;
+	border-bottom:transparent;
+	}
+a:focus{outline:0;}
+a{color:#14b9ff;}
 .social {list-style:outside none none;margin:0;padding:0;}
 .social li{display: inline-block;}
 .social li a{
@@ -18,10 +23,31 @@ a:focus {outline:0;}
 	color:#333333;
 }
 
+li.active{background:transparent;}
+
+.btn-primary {
+	background-color: #14b9ff;
+	border-color:transparent;
+	}
+
+.modal-header{background:#14b9ff;}	
+.modal-title{color:#fff;}
+.modal-body >.row {margin-bottom:30px;}
+
+
+
+	
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+	color:#3dc5df;
+	background-color:#383C40;
+}
+
+
+
 
 .social li a:link {color:#333333;}
 .social li a:hover {
-	color:#663399;
+	color:#14b9ff;
 	cursor:pointer;
 	-webkit-transition: all ease-in-out .6s;
 	-moz-transition: all ease-in-out .6s;
@@ -41,6 +67,7 @@ a:focus {outline:0;}
   overflow-y: auto;
   z-index: 1000;
   transition: all 0.4s ease 0s;
+  background-color: #14B9FF;
 }
 
 #wrapper.active {padding-left:0;}
@@ -58,13 +85,47 @@ a:focus {outline:0;}
 }
 
 
-.sidebar-nav li {line-height: 40px;text-indent: 20px;}
+.sidebar-nav li {
+	line-height:30px;
+	text-indent:20px;
+	}
+	
 .sidebar-nav li a {
-  color: #663399;
+  color:#efefef;
   display: block;
   text-decoration: none;
   padding-left:30px;
 }
+
+.sidebar-nav li a:hover {
+	color:#fff;
+	background:transparent;
+	transition: all 0.4s ease 0s;
+	}
+
+
+.sidebar-nav ul {
+    width: 250px;
+    margin-top: 50px;
+    &:hover {
+      li {
+        color: fade(white, 50%);
+      }
+    }
+    li {
+      transition-duration: 0.25s;
+      display: block;
+      padding: 5px 40px;
+      color: white;
+      letter-spacing: 0.02em;
+      text-align: right;
+      &:hover {
+        cursor: pointer;
+        color: white;
+      }
+    }
+  }
+
 
 
 .sidebar-nav li a span:before {
@@ -76,7 +137,7 @@ a:focus {outline:0;}
   line-height: 18px;
 }
 
-.sidebar-nav li a:hover {color:#000;background:transparent;}
+
 
 /*
 .sidebar-nav li.active {
@@ -85,7 +146,6 @@ a:focus {outline:0;}
 }
 */
 .sidebar-nav li a:active,.sidebar-nav li a:focus{text-decoration: none;outline:0;}
-
 .sidebar-nav > .sidebar-brand {
   height:65px;
   line-height:60px;
@@ -96,7 +156,7 @@ a:focus {outline:0;}
 .sidebar-nav > .sidebar-brand a:hover {color:#fff;background:none;}
 
 
-/*Content Navigation*/
+/*Content Navigation
 .content-header {
 	height:500px;
 	line-height:65px;
@@ -107,42 +167,73 @@ a:focus {outline:0;}
     background:linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.70)),url(../../assests/img/header-bg-1.jpg) no-repeat center center fixed;
     background:-webkit-linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.70)),url(../../assests/img/header-bg-1.jpg) no-repeat center center fixed;
 	text-align:center;
-	}
+	}*/
+	
+.content-header{height:300px;}
 .content-header h1 {
-	color:#ffffff;
+	color:#14b9ff;
 	font-size:50px;
 	padding-top:50px;
-	display: inline-block;
-	
-}
+	display: inline-block;	
+	}
 
+.content-header p {
+	color:#ffffff;
+	font-size:30px;
+	}
+	
 
 /*About me*/
-.about-me{padding:40px;}
-
+.about-me{padding:120px;}
 
 /*Experinece me*/
-.experience{padding:40px;}
+.experience{padding:120px;}
+.exp-list li{
+	list-style:none;
+	display:inline;
+	background-color:#14b9ff;
+	color:#fff;
+	padding:10px;
+	margin:15px;
+	}
+.exp-list a{color:#fff;}
+
 
 
 /*Projects*/
-.projects h3:hover{cursor:pointer;}
-.projects{padding:40px;}
 
+.projects h2{color:#ccc;}
+.projects h3{font-size:15px;}
+.projects h3:hover{cursor:pointer;}
+.projects h3:after{
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+	}
+.projects{padding:120px;}
+.project-title{background:#14b9ff;padding:10px;color:#fff;}
+.caption img{margin-bottom:30px;}
+.caption h3{
+	font-size:15px;
+	line-height:1.5em;
+	}
+
+	
 
 /*Contact us */
-.contacts{padding:40px;}
-
-
-
+.contacts{padding:120px;}
 
 
 #menu-toggle {text-decoration:none;}
-.toggle-icon{text-align:left;margin-left:50px;font-size:30px;}
+.toggle-icon{text-align:left;margin-left:50px;}
 
 /*Button Configuration*/
 
-.btn-menu {color:#ffffff;} 
+.btn-menu{
+	color:#14b9ff;
+	font-size:20px;
+	top:20px;
+	} 
+
 .inset{padding: 20px;}
 .btn {
 	border-radius:0%;
@@ -151,34 +242,39 @@ a:focus {outline:0;}
 	}
 
 .btn-default{
-	border:2px solid #ffffff;
-    background:transparent;
+	border:2px solid #4183d7;
+    background:#4183d7;
     color: #fff;
 
 }
 	
-
 /* Media Queries*/
 
 @media (max-width:767px) {
 
-#wrapper {padding-left: 0;}
-#sidebar-wrapper {left: 0;}
+	#wrapper {padding-left: 0;}
+	#sidebar-wrapper {left: 0;}
+	#wrapper.active {
+	  position: relative;
+	  left: 250px;
+	}
+	
+	#wrapper.active #sidebar-wrapper {
+	  left: 250px;
+	  width: 250px;
+	  transition: all 0.4s ease 0s;
+	}
 
-#wrapper.active {
-  position: relative;
-  left: 250px;
-}
-
-#wrapper.active #sidebar-wrapper {
-  left: 250px;
-  width: 250px;
-  transition: all 0.4s ease 0s;
-}
+	#menu-toggle {display:inline-block;}
+	.inset {padding:15px;}
+	
 
 
-#menu-toggle {display:inline-block;}
-
-.inset {padding:15px;}
-
+	
+	
+	.content-header{height:300px;}
+	.about-me{padding:50px;}
+	.experience{padding:50px;}
+	.projects{padding:50px;}
+	.contacts{padding:50px;}
 }
